@@ -1,3 +1,7 @@
+2005-02-25  Werner Koch  <wk@g10code.com>
+
+	* pubkey.c (gcry_pk_get_keygrip): Allow for shadowed-private-key.
+
 2005-01-05  Werner Koch  <wk@g10code.com>
 
 	* serpent.c: s/u32_t/u32/ and s/byte_t/byte/.  Too match what we
